--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "supertest": "~0.14.0",
     "should": "~4.1.0",
     "grunt-env": "~0.4.1",
-    "grunt-node-inspector": "~0.1.3",
+    "grunt-node-inspector": ">=0.1.3",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-csslint": "^0.3.1",
@@ -65,6 +65,8 @@
     "karma-chrome-launcher": "~0.1.2",
     "karma-firefox-launcher": "~0.1.3",
     "karma-phantomjs-launcher": "~0.1.2",
-    "migrate": "^0.2.0"
+    "migrate": "^0.2.0",
+    "grunt": "~1.0.1",
+    "mocha": "~3.4.2"
   }
 }
